# huginn

./: .appveyor.yml  .ccmalloc  .gitignore  .gitlab-ci.yml  .travis.yml  BSDmakefile  CMakeLists.txt  GNUmakefile  LICENSE.md  Makefile.mk.in  README.md  _aux  configure.ac  configure.js  huginn.lsm.in  huginn.spec.in  huginnrc  make.ps1  makefile  msvcxx.mk  setup.sh
.github/workflows/: ci.yml
_deploy/: jupyter-deploy
_deploy/centos/: Makefile  huginn.spec
_deploy/darwin/: formulae.rb.in  homebrew.mk
_deploy/debian/: Makefile  README  README.Debian  README.source  control  copyright  docs  dropprivs.c  huginn.dirs  huginn.install  postinst  postrm  rules
_deploy/debian/source/: options
_deploy/emacs/: huginn.el
_deploy/freebsd/: Makefile  pkg-descr  pkg-plist.begin  pkg-plist.end
_deploy/geshi/: huginn.php
_deploy/jupyter/: deploy  kernel.json
_deploy/pygments/: huginn.py
_deploy/solaris/: GNUmakefile  makefile  pkginfo.in  solaris.mk
_deploy/sublime/: Huginn.sublime-syntax
_deploy/vim/: ftplugin.vim  hgnsh-syntax.vim  syntax.vim
_deploy/windows/: Makefile  extra.wix  patch.wix
debian/: changelog  control  dirs  docs  huginn.1  huginn.examples  menu  postinst  postrm  preinst  prerm  rules
doc/: COPYRIGHT  README
src/: braceexpansion.cxx  braceexpansion.hxx  codemirror.css  codemirror.js  colorize.cxx  colorize.hxx  description.cxx  description.hxx  forwardingshell.cxx  forwardingshell.hxx  gen-asciidoc  gendocs.cxx  gendocs.hxx  geshi.php  hgnsh.cmd  hgnsh.ps1  huginn.1  huginn.cxx  huginn.hxx  huginn.rc  huginn.texinfo  ihuginn.py  init.sample  init.shell.sample  interactive.cxx  interactive.hxx  jupyter.css  jupyter.cxx  jupyter.hxx  kernel.json  linerunner.cxx  linerunner.hxx  local.hxx  main.cxx  main.hxx  manual.txt  meta.cxx  meta.hxx  oneliner.cxx  oneliner.hxx  (+31 more)
src/shell/: builtins.cxx  capture.cxx  capture.hxx  command.cxx  command.hxx  completion.cxx  job.cxx  job.hxx  util.cxx  util.hxx
tests/: ProgramOptions.hgn  install-dev-shell.sh  linter.sh  rc.shell.win.test  reformater-tests.sh  shell-tests-framework.sh  shell-tests.sh  start-dev-shell.sh  start-dev.ps1
tests/data/: assume-used.lst  inouterr.hgn  params.hgn  testrunrc
tests/data/reformat/: expressions.hgn  multiline-line-comment.hgn  single-line-comment.hgn  trycatch.hgn
tests/debug/: hgnsh
tests/reldeb/: hgnsh
